--- a/keycloak/Dockerfile
+++ b/keycloak/Dockerfile
@@ -7,9 +7,14 @@ ENV KC_METRICS_ENABLED=true
 # Configure a database vendor
 ENV KC_DB=postgres
 
+RUN keytool -genkeypair -storepass password -storetype PKCS12 -keyalg RSA -keysize 2048 -dname "CN=server" -alias server -ext "SAN:c=DNS:localhost,IP:127.0.0.1" -keystore conf/server.keystore
 RUN /opt/keycloak/bin/kc.sh build
 
 FROM quay.io/keycloak/keycloak:latest
 COPY --from=builder /opt/keycloak/ /opt/keycloak/
+
+ENV KC_PROXY=edge
+ENV PROXY_ADDRESS_FORWARDING=true
+ENV KC_HOSTNAME_STRICT_BACKCHANNEL=true
 
 ENTRYPOINT ["/opt/keycloak/bin/kc.sh"]
