--- a/keycloak/keycloak-prod-compose.yaml
+++ b/keycloak/keycloak-prod-compose.yaml
@@ -19,6 +19,8 @@ services:
     image: keycloak_sso
     ports:
       - "443:8443"
+      - "8080:8080"
+      - "8081:8081"
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=admin
@@ -27,17 +29,18 @@ services:
       - KC_DB_PASSWORD=postgres
       - KC_DB_USERNAME=postgres
       - KC_HEALTH_ENABLED=true
-      - KC_HOSTNAME_PATH=/_/admin
-      - KC_HOSTNAME_STRICT=true
-      - KC_HOSTNAME_URL=https://sso.supareel.com
+      - KC_PROXY=edge
+      - KC_HOSTNAME_URL=https://localhost:8081
+      - KC_HTTPS_PORT=8081
       - KC_HOSTNAME_STRICT_BACKCHANNEL=true
+      - PROXY_ADDRESS_FORWARDING=true
       - KC_HTTP_ENABLED=false
       - KC_HTTPS_KEY_STORE_FILE=/etc/keycloak/certs/keycloak.jks
-      - KC_HTTPS_KEY_STORE_PASSWORD=XXXXXXXXXX
+      - KC_HTTPS_KEY_STORE_PASSWORD=foxbat
       - KC_LOG_CONSOLE_COLOR=true
-      - KC_HTTPS_CERTIFICATE_FILE=/etc/keycloak/certs/kc.crt
-      - KC_HTTPS_CERTIFICATE_KEY_FILE=/etc/keycloak/certs/kc.key
+      - KC_HTTPS_CERTIFICATE_FILE=/etc/keycloak/certs/keycloak-server.crt.pem
+      - KC_HTTPS_CERTIFICATE_KEY_FILE=/etc/keycloak/certs/keycloak-server.key.pem
       - KC_DIR=/etc/keycloak/exports
     command: ["start", "--optimized"]
     volumes:
-      - ./kcdata/certs/:/etc/keycloak/certs/
+      - $PWD/kcdata/certs/:/etc/keycloak/certs/
