create zitadel compose

--- a/keycloak/keycloak-prod-compose.yaml
+++ b/keycloak/keycloak-prod-compose.yaml
@@ -1,6 +1,13 @@
 version: '3.8'
 
 services:
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./kcdata/nginx.conf:/etc/nginx/nginx.conf
+    restart: always
   db:
     image: postgres
     restart: always
@@ -16,6 +23,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    image: keycloak_service
     ports:
       - "443:8443"
       - "8080:8080"
@@ -31,7 +39,7 @@ services:
       - KC_LOG_CONSOLE_COLOR=true
       - KC_DIR=/etc/keycloak/exports
       - KC_HTTPS_PROTOCOLS=TLSv1.3,TLSv1.2
-      - KC_HOSTNAME=44.210.91.80:8080
+      - KC_HOSTNAME=44.210.91.80:8443
       - KC_HTTP_PORT=8080
       - KC_HOSTNAME_STRICT_HTTPS=false
       - KC_HTTP_ENABLED=true
