--- a/keycloak/kcdata/nginx.conf
+++ b/keycloak/kcdata/nginx.conf
@@ -3,7 +3,7 @@ server{
     rewrite ^ https://sso.supareel.com permanent;
 }
 server {
-    listen 443 asl;
+    listen 443 ssl;
     server_name sso.supareel.com www.sso.supareel.com;
 
     ssl_certificate /etc/letsencrypt/live/sso.supareel.com/fullchain.pem;
@@ -18,10 +18,8 @@ server {
         proxy_set_header    Host    $remote_addr;
         proxy_set_header    Host    $proxy_add_x_forwarded_for;
         proxy_set_header    Host    $scheme;
-        proxy_pass https://3.82.229.124:8081;
-        proxy_headers_hash_max_size: 1024;
-        proxy_headers_hash_bucket_size: 128;
+        proxy_pass https://3.91.196.160:8081;
+        proxy_headers_hash_max_size 1024;
+        proxy_headers_hash_bucket_size 128;
     }
 }
-
-
