--- a/keycloak/keycloak-prod-compose.yaml
+++ b/keycloak/keycloak-prod-compose.yaml
@@ -25,9 +25,8 @@ services:
       dockerfile: Dockerfile
     image: keycloak_service
     ports:
-      - "443:8443"
+      - "8443:8443"
       - "8080:8080"
-      - "80:8080"
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=admin
@@ -39,7 +38,7 @@ services:
       - KC_LOG_CONSOLE_COLOR=true
       - KC_DIR=/etc/keycloak/exports
       - KC_HTTPS_PROTOCOLS=TLSv1.3,TLSv1.2
-      - KC_HOSTNAME=44.210.91.80:8443
+      - KC_HOSTNAME=https://sso.supareel.com
       - KC_HTTP_PORT=8080
       - KC_HOSTNAME_STRICT_HTTPS=false
       - KC_HTTP_ENABLED=true
