--- a/zitadel/dev/docker-compose.yml
+++ b/zitadel/dev/docker-compose.yml
@@ -1,6 +1,13 @@
 version: "3.8"
 
 services:
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+
   zitadel:
     restart: "always"
     networks:
