--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,20 @@
+# Redirect HTTP requests to HTTPS
 server {
-    listen 80;
+    listen 80;  # Listen for incoming HTTP requests on port 80
+    server_name portainer.supareel.com;  # Replace with your actual domain
+
+    # Redirect all HTTP requests to HTTPS
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;  # Listen for incoming HTTPS requests on port 443
     server_name portainer.supareel.com www.portainer.supareel.com;
+
+    # SSL certificate paths
+    ssl_certificate /etc/letsencrypt/live/portainer.supareel.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/portainer.supareel.com/privkey.pem;
+
 
     location /xxx {
         proxy_pass https://localhost:XXXX;
