--- a/nginx-proxy-manager/docker-compose.yml
+++ b/nginx-proxy-manager/docker-compose.yml
@@ -4,30 +4,22 @@ services:
     image: "jc21/nginx-proxy-manager:latest"
     restart: unless-stopped
     ports:
-      # These ports are in format <host-port>:<container-port>
-      - "80:80" # Public HTTP Port
-      - "443:443" # Public HTTPS Port
-      - "81:81" # Admin Web Port
-      # Add any other Stream port you want to expose
-      # - '21:21' # FTP
+      - "8081:81"
     environment:
-      # Mysql/Maria connection parameters:
       X_FRAME_OPTIONS: "sameorigin"
       DISABLE_IPV6: "true"
-      DB_MYSQL_HOST: "db"
+      DB_MYSQL_HOST: "mariadb"
       DB_MYSQL_PORT: 3306
       DB_MYSQL_USER: "npm"
       DB_MYSQL_PASSWORD: "npm"
       DB_MYSQL_NAME: "npm"
-      # Uncomment this if IPv6 is not enabled on your host
-      # DISABLE_IPV6: 'true'
     volumes:
       - ./data:/data
       - ./letsencrypt:/etc/letsencrypt
     depends_on:
-      - db
+      - mariadb
 
-  db:
+  mariadb:
     image: "jc21/mariadb-aria:latest"
     restart: unless-stopped
     environment:
@@ -38,8 +30,3 @@ services:
       MARIADB_AUTO_UPGRADE: "1"
     volumes:
       - ./mysql:/var/lib/mysql
-
-networks:
-  default:
-    external: true
-    name: scoobydoo
