--- a/nginx/proxymanager.supareel.com.conf
+++ b/nginx/proxymanager.supareel.com.conf
@@ -17,7 +17,7 @@ server {
 
 
     location /xxx {
-        proxy_pass https://localhost:8081;
+        proxy_pass http://localhost:8081;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
