--- a/nginx/portainer.supareel.com.conf
+++ b/nginx/portainer.supareel.com.conf
@@ -16,8 +16,8 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/portainer.supareel.com/privkey.pem;
 
 
-    location /xxx {
-        proxy_pass https://localhost:XXXX;
+    location / {
+        proxy_pass https://localhost:9443;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
