fix nginx config

--- a/nginx/proxymanager.supareel.com.conf
+++ b/nginx/proxymanager.supareel.com.conf
@@ -16,7 +16,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/proxymanager.supareel.com/privkey.pem;
 
 
-    location /xxx {
+    location / {
         proxy_pass https://localhost:8081;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
