ready for deploy authentic

--- a/nginx/sso.supareel.com.conf
+++ b/nginx/sso.supareel.com.conf
@@ -1,6 +1,6 @@
 # Upstream where your authentik server is hosted.
 upstream authentik {
-    server localhost:9443;
+    server sso.supareel.com;
     # Improve performance by keeping some connections alive.
     keepalive 10;
 }
@@ -15,7 +15,7 @@ server {
     # HTTP server config
     listen 80;
     listen [::]:80;
-    server_name sso.domain.tld;
+    server_name sso.supareel.com;
     # 301 redirect to HTTPS
     return 301 https://$host$request_uri;
 }
@@ -23,11 +23,11 @@ server {
     # HTTPS server config
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name sso.domain.tld;
+    server_name sso.supareel.com;
 
     # TLS certificates
-    ssl_certificate /etc/letsencrypt/live/domain.tld/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/domain.tld/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/sso.supareel.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/sso.supareel.com/privkey.pem;
     add_header Strict-Transport-Security "max-age=63072000" always;
 
     # Proxy site
