keycloak prod env

--- a/keycloak/keycloak-prod-compose.yaml
+++ b/keycloak/keycloak-prod-compose.yaml
@@ -13,9 +13,9 @@ services:
       KEYCLOAK_ADMIN_PASSWORD: admin
       KC_HTTPS_CLIENT_AUTH: required
       KC_DB: postgres
-      KC_DB_URL: db_url
-      KC_DB_PASSWORD: db_pass
-      KC_DB_USERNAME: db_user
+      KC_DB_URL: ${DB_URL:-db_url}
+      KC_DB_PASSWORD: ${DB_PASSWORD:-db_pass}
+      KC_DB_USERNAME: ${DB_USER:-db_user}
       KC_HOSTNAME_STRICT: 'false'
       KC_LOG_CONSOLE_COLOR: 'true'
       KC_DIR: /etc/keycloak/exports
